kube-exercises/hw-03/exercise-01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx-server
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
