kube-exercises/hw-03/exercise-01/ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-tls
spec:
  tls:
  - hosts:
      - mario.student.lasalle.com
    secretName: nginx-secret-tls
  rules:
  - host: mario.student.lasalle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
